--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport">
-    <title>Demo Webpage</title>
-    <link rel="stylesheet" href="Style.css" type="text/css"/>
-<body>
-    <H1>Hello World</H1>
-    <img src="Images/0.jpg" alt="Ez itt riven">
-    <p class="username">@janivook</p>
-    <p>Ez itt riven</p>
-    <h2><a href="https://www.leagueoflegends.com/hu-hu/champions/riven/"> About her</a></h2>
-    <script src="index.js"/>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport">
+        <title>Demo Webpage</title>
+        <link rel="stylesheet" href="Style.css" type="text/css">
+    <body>
+        <H1>Hello World</H1>
+        <h2>Well this does work</h2>
+        <h3>Only Testing</h3>
+        <img src="Images/0.jpg" alt="Ez itt Riven">
+        <p class="username">@riven</p>
+        <p>Ez itt Riven</p>
+        <h2>
+            <a href="https://www.leagueoflegends.com/hu-hu/champions/riven/">
+                About her
+            </a>
+        </h2>
+        <script src="index.js"></script>
+    </body>
 </html>
