Youtube prev Page

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport">
         <title>Demo Webpage</title>
-        <link rel="stylesheet" href="Style.css" type="text/css">
+        <link rel="stylesheet" href="../Styles/Style.css" type="text/css">
     <body>
         <H1>Hello World</H1>
         <h2>Well this does work</h2>
         <h3>Only Testing</h3>
-        <img src="Images/0.jpg" alt="Ez itt Riven">
+        <img src="../Images/0.jpg" alt="Ez itt Riven">
         <p class="username">@riven</p>
         <p>Ez itt Riven</p>
         <h2>
@@ -17,6 +18,9 @@
                 About her
             </a>
         </h2>
-        <script src="index.js"></script>
+        <div w3-include-html="Buttons.html"></div>
+        <div w3-include-html="Texts.html"></div>
+        <div w3-include-html="website.html"></div>
+        <script src="../Scripts/index.js"></script>
     </body>
 </html>
